--- a/src/styles.css
+++ b/src/styles.css
@@ -125,6 +125,11 @@ section{
     height: 100vh;
 }
 
+.section-banner {
+    display: block;
+    height: 30vh !important;
+}
+
 #sec-main{
     background-image: url(/img/secmain-bg-1.png);
     background-size: cover;
@@ -138,7 +143,15 @@ section{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    background-color: #1b1b1b;
+    background-color: #151515;
+    width: 100%;
+}
+
+#sec-sub-header{
+    background-image: url(/img/work_exp_banner1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
     width: 100%;
 }
 
@@ -246,6 +259,149 @@ section{
   text-align: center;
 }
 
+.text-center-hv{
+    display: flex !important; 
+    justify-content: center; 
+    align-items: center;
+}
+
+/*Card*/
+.card{
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+    max-width: 400px;
+    height: 400px;
+    background-color: #1d1d1d;
+    box-shadow: 0 20px 30px rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+    overflow: hidden;
+    transition: all 0.35s ease;
+    margin: 20px;
+    cursor: pointer;
+}
+
+.card:hover{
+    transform: scale(1.05) translateY(-20px);
+}
+
+.card .thumbnail{
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    overflow: hidden;
+}
+
+.card .thumbnail, .card .entry {
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.thumbnail {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-size: cover;
+    background-position: center;
+}
+
+.image-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover;
+    z-index: 0;
+    transition: all 1s 0.05s ease;
+    filter: saturate(0) brightness(0.6);
+    transition: 1s;
+}
+
+.card:hover .image-bg{
+    filter: saturate(1) brightness(1);
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+.card .entry {
+    position: relative;
+    height: 35%;
+    display: flex;
+    padding-top: 20px;
+}
+
+.entry {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 100%;
+}
+
+.card .pillar {
+    transform: translateY(-50%);
+    position: absolute;
+    top: 0;
+    font-size: 0.8vw;
+    font-weight: 600;
+}
+
+.pillar.color1{
+    background-color: #88afc0 !important;
+}
+
+.pillar.color2{
+    background-color: #1C82AD !important;
+}
+
+.pillar.color3{
+    background-color: #00337C !important;
+}
+
+.pillar.color4{
+    background-color: #13005A !important;
+}
+
+.pillar {
+    display: inline-table;
+    width: -moz-max-content;
+    width: max-content;
+    color: #fff;
+    background-color: #003247;
+    text-transform: uppercase;
+    padding: 1px 6px;
+    font-size: 1.3rem;
+    letter-spacing: 0.1rem;
+}
+
+.card .heading {
+    margin: 0;
+    font-size: 2.4rem;
+    line-height: 1.25em;
+    color: #fff;
+    font-size: 1.1vw;
+    font-weight: 400;
+}
+
+.card .meta {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.meta {
+    display: flex;
+    flex-direction: row;
+    color: #696969;
+    font-size: 0.8rem;
+    font-style: italic;
+}
+
 /*responsive*/
 @media (max-width: 1980px){
     .container-first {
@@ -273,6 +429,11 @@ section{
     .container-second{
         max-width: 1000px;
     }
+    .card{
+        width: 300px;
+        max-width: 300px;
+        height: 300px;
+    }
 }
 
 @media (max-width: 500px){
@@ -290,6 +451,11 @@ section{
     }
     .text-box-1{
         margin-left: 0;
+    }
+    .card{
+        width: 300px;
+        max-width: 300px;
+        height: 300px;
     }
 }
 
