--- a/public/styles.css
+++ b/public/styles.css
@@ -561,6 +561,10 @@ video {
   border-width: 0;
 }
 
+.static {
+  position: static;
+}
+
 .absolute {
   position: absolute;
 }
@@ -580,6 +584,22 @@ video {
 
 .right-0 {
   right: 0px;
+}
+
+.left-1\/2 {
+  left: 50%;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.top-1\/2 {
+  top: 50%;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .mx-auto {
@@ -644,6 +664,18 @@ video {
   height: 2rem;
 }
 
+.h-5 {
+  height: 1.25rem;
+}
+
+.h-56 {
+  height: 14rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
 .w-4 {
   width: 1rem;
 }
@@ -654,6 +686,18 @@ video {
 
 .w-auto {
   width: auto;
+}
+
+.w-5 {
+  width: 1.25rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-full {
@@ -670,6 +714,20 @@ video {
 
 .grow {
   flex-grow: 1;
+}
+
+.-translate-x-1\/2 {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-1\/2 {
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .grid-cols-3 {
@@ -712,8 +770,20 @@ video {
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
 }
 
 .bg-gray-900 {
@@ -729,6 +799,19 @@ video {
 .bg-neutral-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(23 23 23 / var(--tw-bg-opacity));
+}
+
+.bg-white\/30 {
+  background-color: rgb(255 255 255 / 0.3);
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-white\/50 {
+  background-color: rgb(255 255 255 / 0.5);
 }
 
 .p-2 {
@@ -762,6 +845,11 @@ video {
 .py-7 {
   padding-top: 1.75rem;
   padding-bottom: 1.75rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .pb-3 {
@@ -841,6 +929,14 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.ease-linear {
+  transition-timing-function: linear;
+}
+
 html{
   scroll-behavior: smooth;
 }
@@ -871,9 +967,18 @@ html{
 }
 
 .box-contain{
-  background: linear-gradient(0deg, rgb(115, 80, 255) 0%, rgba(41,149,250,1) 50%);
+  background: linear-gradient(0deg, rgb(80, 112, 255) 0%, #2995fa 50%);
   padding: 1px 5px;
   border-radius: 4px;
+  font-weight: 600;
+  color: #fff;
+  font-size: 0.7vw;
+  margin-right: 7px;
+}
+
+.des-box-contain{
+  padding: 1px 5px;
+  border-radius: 2px;
   font-weight: 600;
   color: #fff;
   font-size: 0.7vw;
@@ -989,7 +1094,6 @@ section{
 }
 
 #sec-sub-header{
-  background-image: url(/img/work_exp_banner1.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -1007,7 +1111,7 @@ section{
 }
 
 .text-hl{
-  background: linear-gradient(0deg, rgb(115, 80, 255) 0%, rgba(41,149,250,1) 50%);
+  background: linear-gradient(0deg, rgb(80, 112, 255) 0%, #2995fa 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1028,7 +1132,7 @@ section{
 }
 
 .text-gradient{
-  background: linear-gradient(0deg, rgb(115, 80, 255) 0%, rgba(41,149,250,1) 50%);
+  background: linear-gradient(0deg, rgb(80, 112, 255) 0%, #2995fa 50%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -1196,10 +1300,11 @@ section{
   top: 0;
   font-size: 0.8vw;
   font-weight: 600;
+  border-radius: 2px;
 }
 
 .pillar.color1{
-  background-color: #88afc0 !important;
+  background-color: #5a879b !important;
 }
 
 .pillar.color2{
@@ -1212,6 +1317,22 @@ section{
 
 .pillar.color4{
   background-color: #13005A !important;
+}
+
+.des-color1{
+  background-color: #404258;
+}
+
+.des-color2{
+  background-color: #7895B2;
+}
+
+.des-color3{
+  background-color: #50577A;
+}
+
+.des-color4{
+  background-color: #6B728E;
 }
 
 .pillar {
@@ -1368,18 +1489,23 @@ section{
 @keyframes highlight-anim {
   from {
     width: 0;
-    background: linear-gradient(transparent 45%, rgb(115, 80, 255) 41%, #2995fa 80%, transparent 81%);
+    background: linear-gradient(transparent 45%, rgb(80, 112, 255) 41%, #2995fa 80%, transparent 81%);
   }
 
   to {
     width: 110%;
-    background: linear-gradient(transparent 45%, rgb(115, 80, 255) 41%, #2995fa 80%, transparent 81%);
+    background: linear-gradient(transparent 45%, rgb(80, 112, 255) 41%, #2995fa 80%, transparent 81%);
   }
 }
 
 .hover\:bg-gray-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1407,10 +1533,43 @@ section{
   --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
 }
 
+.group:hover .group-hover\:bg-white\/50 {
+  background-color: rgb(255 255 255 / 0.5);
+}
+
+.group:focus .group-focus\:outline-none {
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+.group:focus .group-focus\:ring-4 {
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.group:focus .group-focus\:ring-white {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(255 255 255 / var(--tw-ring-opacity));
+}
+
 @media (prefers-color-scheme: dark) {
   .dark\:bg-neutral-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(38 38 38 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-800\/30 {
+    background-color: rgb(31 41 55 / 0.3);
+  }
+
+  .dark\:bg-gray-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .dark\:bg-gray-800\/50 {
+    background-color: rgb(31 41 55 / 0.5);
   }
 
   .dark\:text-neutral-200 {
@@ -1421,6 +1580,24 @@ section{
   .dark\:text-neutral-400 {
     --tw-text-opacity: 1;
     color: rgb(163 163 163 / var(--tw-text-opacity));
+  }
+
+  .dark\:text-gray-800 {
+    --tw-text-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-gray-800:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+  }
+
+  .group:hover .dark\:group-hover\:bg-gray-800\/60 {
+    background-color: rgb(31 41 55 / 0.6);
+  }
+
+  .group:focus .dark\:group-focus\:ring-gray-800\/70 {
+    --tw-ring-color: rgb(31 41 55 / 0.7);
   }
 }
 
@@ -1454,6 +1631,22 @@ section{
     display: none;
   }
 
+  .sm\:h-10 {
+    height: 2.5rem;
+  }
+
+  .sm\:h-6 {
+    height: 1.5rem;
+  }
+
+  .sm\:w-10 {
+    width: 2.5rem;
+  }
+
+  .sm\:w-6 {
+    width: 1.5rem;
+  }
+
   .sm\:items-stretch {
     align-items: stretch;
   }
@@ -1469,6 +1662,12 @@ section{
 
   .sm\:pr-0 {
     padding-right: 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:h-96 {
+    height: 24rem;
   }
 }
 
