--- a/public/styles.css
+++ b/public/styles.css
@@ -616,6 +616,10 @@ video {
   margin-bottom: 1.25rem;
 }
 
+.ml-3 {
+  margin-left: 0.75rem;
+}
+
 .mr-9 {
   margin-right: 2.25rem;
 }
@@ -704,6 +708,10 @@ video {
   flex: 1 1 0%;
 }
 
+.flex-auto {
+  flex: 1 1 auto;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -724,10 +732,6 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .grid-cols-3 {
@@ -1122,6 +1126,12 @@ section{
   font-weight: 600;
 }
 
+.text-sz-nr2{
+  font-size: 4.5vw;
+  line-height: 5rem;
+  font-weight: 600;
+}
+
 .text-gradient{
   background: linear-gradient(0deg, rgb(80, 112, 255) 0%, #2995fa 50%);
   -webkit-background-clip: text;
@@ -1154,7 +1164,27 @@ section{
   transition: 1s;
 }
 
+.txt-highlight-2 {
+  position: relative;
+  background: transparent;
+  /*padding-left: 5px;*/
+  transition: 1s;
+}
+
 .txt-highlight-3::after {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  animation: highlight-anim2 1s;
+  animation-fill-mode: forwards;
+}
+
+.txt-highlight-2::after {
   content: "";
   display: inline-block;
   position: absolute;
@@ -1387,6 +1417,14 @@ section{
   height: 28rem;
 }
 
+.slider-container{
+  width: 45rem;
+}
+
+.poster-container{
+  display: block;
+}
+
 /*responsive*/
 
 @media (max-width: 1980px){
@@ -1404,6 +1442,10 @@ section{
 
   .sub-work-header{
     margin-bottom: 5px;
+  }
+
+  .poster-img{
+    height: 24.5rem;
   }
 }
 
@@ -1428,6 +1470,15 @@ section{
 
   .slider-box{
     height: 20rem;
+  }
+
+  .slider-container{
+    padding: 1rem 0;
+    width: 35rem;
+  }
+
+  .poster-img{
+    height: 19rem;
   }
 }
 
@@ -1460,6 +1511,20 @@ section{
 
   .slider-box{
     height: 14rem;
+  }
+
+  .slider-container{
+    padding: 0;
+    width: 20rem;
+  }
+
+  .poster-container{
+    display: none !important;
+  }
+
+  .text-sz-nr2{
+    font-size: 6vw;
+    line-height: 1rem;
   }
 }
 
@@ -1502,6 +1567,18 @@ section{
   to {
     width: 110%;
     background: linear-gradient(transparent 45%, rgb(80, 112, 255) 41%, #2995fa 80%, transparent 81%);
+  }
+}
+
+@keyframes highlight-anim2 {
+  from {
+    width: 0;
+    background: linear-gradient(transparent 45%, #2995fa 41%, #2995fa 80%, transparent 81%);
+  }
+
+  to {
+    width: 100%;
+    background: linear-gradient(transparent 45%, #2995fa 41%, #2995fa 80%, transparent 81%);
   }
 }
 
@@ -1592,11 +1669,6 @@ section{
 @media (max-width: 600px) {
   .max-\[600px\]\:grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
-  }
-
-  .max-\[600px\]\:px-5 {
-    padding-left: 1.25rem;
-    padding-right: 1.25rem;
   }
 }
 
