--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ html{
 
 .menu-header-box{
     display: block;
-    background-color: #fff;
+    background-color: #131313;
     width: 100%;
     height: 15vh;
     margin-top: 50px;
